Fixed styling issue with key up/down not showing focused element PM-1017

--- a/category-selector/src/styles/categorySuggestion.scss
+++ b/category-selector/src/styles/categorySuggestion.scss
@@ -16,30 +16,32 @@
         -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     }
     /* stylelint-enable */
-}
 
-.react-autosuggest__suggestions-list {
-    position: absolute;
-    z-index: 10;
-    overflow-x: auto;
+    &--open {
 
-    width: 100%;
-    min-width: 200px;
-    height: auto;
-    max-height: 250px;
+        .react-autosuggest__suggestions-container {
+            position: absolute;
+            z-index: 10;
+            overflow-x: auto;
 
-    background: #ffffff;
-    border: 1px solid #eeeeee;
-    border-radius: 3px;
+            width: 100%;
+            height: auto;
+            max-height: 250px;
 
-    cursor: pointer;
+            background: #ffffff;
+            border: 1px solid #eeeeee;
+            border-radius: 3px;
 
-    /* stylelint-disable */
-    /* a library should be used or a mixin */
-    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.125);
-    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.125);
-    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.125);
-    /* stylelint-enable */
+            cursor: pointer;
+
+            /* stylelint-disable */
+            /* a library should be used or a mixin */
+            box-shadow: 0 3px 7px rgba(0, 0, 0, 0.125);
+            -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.125);
+            -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.125);
+            /* stylelint-enable */
+        }
+    }
 }
 
 .react-autosuggest__suggestion {
@@ -70,7 +72,7 @@
     &:nth-of-type(3) {
 
         .react-autosuggest__container {
-            padding-left: 35px;
+            margin-left: 35px;
         }
 
         .category-suggestion__icon {
@@ -81,7 +83,7 @@
     &:nth-of-type(4) {
 
         .react-autosuggest__container {
-            padding-left: 65px;
+            margin-left: 65px;
         }
 
         .category-suggestion__icon {
@@ -89,3 +91,4 @@
         }
     }
 }
+
